cif/org.eclipse.escet.cif.tests/tests/explorer/preconditions.run.err
ERROR: CIF explorer failed due to unsatisfied preconditions:

  ----------------------------------------------------
  (1/6) A derivative of a continuous variable is used.
  ----------------------------------------------------
   * In the top-level scope of the specification:
     - invariant c' = 0.0;
                 ^

  ----------------------------------
  (2/6) A distribution type is used.
  ----------------------------------
   * In discrete variable "pp.d":
     - disc dist real d = constant(1.0);
            ^             ^       ^
   * In algebraic variable "pp.x":
     - alg real x = (sample d)[0];
                     ^      ^

  ----------------------------------------------------
  (3/6) Function is an external user-defined function.
  ----------------------------------------------------
   * In the top-level scope of the specification:
     - func int f(): "java:some.Class.Method";
                ^

  ---------------------------------------------------
  (4/6) Standard library function "constant" is used.
  ---------------------------------------------------
   * In discrete variable "pp.d":
     - disc dist real d = constant(1.0);
                          ^

  --------------------------------------------------------------------------------
  (5/6) The specification has practically infinitely many possible initial states.
  --------------------------------------------------------------------------------

  ------------------------------------
  (6/6) Variable is an input variable.
  ------------------------------------
   * In the top-level scope of the specification:
     - input bool i;
                  ^
